2017-10-18

        * Version 1.5.0 released
        =========================

        Add GCTAOnOffObservation PHA, ARF and RMF constructor (#2231)
        Implement observation stacking in GCTAOnOffObservation (#2228)
        Implement region integration in GCTAOnOffObservation (#2210)
        Add GPha arithmetic operators and scale access methods
        Add GArf arithmetic operators
        Add GRmf arithmetic operators
        Add GEbounds equality and inequality operators
        Fix OpenMP segfault issue when fetching CTA events (#2192) 
        Correct GModelSpatialComposite::copy_members() bug.
        Improve efficiency of GGti::contains() method.
        Add GFitsTableCol::scale() method (#2191)
        Implement code generator for GammaLib extensions (#2190)
        Implement COMPTEL event list support (#2187)
        Implement COMPTEL response computation (#2186)
        Correct output of COMPTEL DRB fitting XML model (#2184)
        Add COMPTEL SDA, SDB and ICT response files (#2186)
        Add GModelSpectralNodes spectral model constructor (#2178)
        Fix UTC rounding error in GTime::utc() method (#2177)
        Add time parameter to GApplicationPar class (#1864)
        Add time string constructor and set method to GTime class (#1864)
        Use GNdarray to store GSkyMap pixels and add smooth() method (#1729)
        Add GSkyRegionMap class (#1121)


2017-08-24

        * Bug fix version 1.4.2 released
        ================================

        Correct rate computation in GModelTemporalLightCurve::mc() (#2181)


2017-08-22

        * Bug fix version 1.4.1 released
        ================================

        Correct GModelSpectralNodes::mc() regression for energies outside the node energy range (#2179)


2017-07-28

        * Version 1.4.0 released
        =========================

        Add GCTAEventBin::ipix() and ieng() setter methods (#2171)