@@ -19,6 +19,8 @@ In particular, this release provides:
 Bug fixes
 ---------
 
+* [`2234 <https://cta-redmine.irap.omp.eu/issues/2234>`_] -
+  Prevent negative response values for COMPTEL IRF
 * [`2192 <https://cta-redmine.irap.omp.eu/issues/2192>`_] -
   Fix OpenMP segfault issue when fetching CTA events
 * Correct bug in ``GModelSpatialComposite::copy_members()``
